--- a/MDS/Credits.css
+++ b/MDS/Credits.css
@@ -11,17 +11,30 @@ body {
     font-family: 'Anonymous Pro', monospace;
     background-color: rgb(25,25,25);
 }
+p {
+    font-size: 25px;
+}
+h1 {
+    font-size: 45px;
+}
+h2 {
+    font-size: 35px;
+}
+li {
+    font-size: 25px;
+}
 .line-1 {
     position: relative;
     top: 1%;
     width: 23em;
     margin: 0 auto;
     border-right: 2px solid rgba(255,255,255,.75);
-    font-size: 180%;
+    font-size: 480%;
     text-align: center;
     white-space: nowrap;
     overflow: hidden;
     transform: translateY(0%);
+    margin-top: 40px;
 }
 
 .homebutton {
