--- a/SYSCOM/Manuale.css
+++ b/SYSCOM/Manuale.css
@@ -3,6 +3,8 @@ body {
     font-size: 16px;
     line-height: 1;
     margin: 15px;
+    background-color: #141F26;
+    color: #cccccc;
 }
 
 ul, ol {
@@ -32,3 +34,10 @@ li img {
 .step img { max-width: 100%; height: auto; }
 .step p { margin: 10px 0; font-size: 20px; }
 .important { font-weight: bold; }
+.returnbutton img {
+    display: flex; /* Utilizza il layout flessibile */
+    justify-content: left; /* Allinea orizzontalmente al centro */
+    position: relative;
+    left: 16px;
+    top: -100px;
+}
