--- a/SYSCOM/SYSCOM.css
+++ b/SYSCOM/SYSCOM.css
@@ -71,6 +71,16 @@
             border-radius: 30px;
         }
 
+        .terminale {
+            font-family: "Courier Prime", monospace;
+            font-weight: 400;
+            font-style: normal;
+            margin: 0; /* Rimuovi i margini */
+            padding: 0; /* Rimuovi i padding */
+            line-height: 1; /* Imposta l'altezza della linea */
+            white-space: pre; /* Mantieni gli spazi */
+        }
+
         .message-important{
             font-family: "Courier Prime", monospace;
             font-weight: 400;
@@ -159,12 +169,19 @@
             justify-content: center;
             align-items: center;
             flex-direction: column;
+            width: auto;
+            height: auto;
         }
         
         .no-link-style {
             text-decoration: none;
             color: inherit;
             cursor: default;
+            margin: 20px;
+            max-width: 100%;
+            height: auto;
+            border-radius: 30px;
+
         }
 
     	.INS {
@@ -236,6 +253,33 @@
         .BUTTON_TUI:hover {
          background-color: #FFFFFF;
          color: #0056B3;
+        }
+
+        .BUTTON_TUI:disabled{
+            pointer-events: none;
+            background-color: #1f1f1f;
+        }
+
+        .BUTTON_CLI {
+            margin: 0;
+            border: 0;
+            display: inline-block;
+            text-align: center;
+            white-space: nowrap;
+            color: #bfbfbc;
+            text-decoration: none;
+            line-height: 1.2;
+            font-size: 18px;
+            background-color: #0C3140;
+            padding: 3px 50px;
+            cursor: pointer;
+            font-family: "Courier Prime", monospace;
+            font-weight: 400;
+            font-style: normal;
+        }
+        .BUTTON_CLI:hover {
+            background-color: #FFFFFF;
+            color: #000000;
         }
 
         .BUTTON_TUI:disabled{
