--- a/index.css
+++ b/index.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Chivo+Mono:ital,wght@0,100..900;1,100..900&family=Playfair+Display:wght@400;700&display=swap');
 
+* {
+    margin: 0;
+    border: 0;
+}
 /* Stili per il layout flessibile */
 body {
     background-color:#fffeef;
@@ -10,20 +14,47 @@ body {
     display: flex; /* Utilizza il layout flessibile */
     align-items: center; /* Allinea verticalmente al centro */
     flex-wrap: wrap; /* Permette agli elementi di andare a capo se non c'è abbastanza spazio */
-    margin-top: 2.55%;
-    margin-left: 2.55%;
+    margin-top: 2%;
+    margin-left: 2%;
+    margin-right: 2%;
 }
-.playfair-display-home-page {
+
+.VWSL {
+    display: flex;
+    margin-left: 3%;
+    margin-top: 2%;
+    margin-right: 3%;
+    width: 800px;
+    height: 800px;
+    align-items: center;
+    flex-wrap: wrap; /* Permette agli elementi di andare a capo se non c'è abbastanza spazio */
+}
+.Menu {
     font-family: 'Playfair Display', serif;
     font-weight: 400;
     font-style: normal;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     text-rendering: optimizeLegibility;
-    margin-left: 10px;
+    margin-left: 2.55%;
+    margin-top: 2.55%;
+}
+
+.Titolo{
+    font-size: 440%;
+    margin-bottom: 8.55%;
+}
+
+.Link-ipertestuali {
+    margin-bottom: 10.55%;
+}
+
+.Link-ipertestuali li {
+    font-size: 170%;
+    margin-bottom: 4.55%;
 }
 .small-hr {
-    width: 300px; /* Specifica la larghezza desiderata */
+    width: 240px; /* Specifica la larghezza desiderata */
     margin: 20px auto; /* Centra l'elemento orizzontalmente */
     border: 1px solid #22346e; /* Puoi personalizzare lo stile del bordo */
     align-items: center; /* Allinea verticalmente al centro */
@@ -34,14 +65,26 @@ body {
 }
 .dis {
     text-decoration: none;
-    color: rgba(0,0,0, 30%);
+    color: rgba(0,0,0, 25%);
     pointer-events: none;
 }
+
 @media (max-width: 1080px) {
-    .container {
-        flex-direction: column; /* Imposta la direzione principale del layout flessibile in verticale */
-        margin-top: 20.55%;
-        margin-left: 2.55%;
-        zoom: 1.7;
+    body {
+        zoom: 110%;
+    }
+}
+
+@media (min-width: 1080px) and (max-width: 2560px) {
+    /*Stili per desktop*/
+    body {
+    zoom: 80%;
+    }
+}
+
+@media (min-width: 2560px) {
+    /*Schermi 4k*/
+    body {
+        zoom: 270%;
     }
 }
