--- a/index.css
+++ b/index.css
@@ -73,6 +73,9 @@ body {
     body {
         zoom: 110%;
     }
+    .Menu{
+        zoom: 155%;
+    }
 }
 
 @media (min-width: 1080px) and (max-width: 2560px) {
